@@ -17,12 +17,6 @@ ID=$(which id)
 USER_GROUP=$($ID -g -n "$USER_LOGIN")
 
 # ------------------------------------------------------------------------------
-# Installation des dépendances
-# ------------------------------------------------------------------------------
-/opt/inist-tools/inistexec apt on
-apt-get install -y make ntpdate parallel jq sudo libnotify-bin
-
-# ------------------------------------------------------------------------------
 # Protection des fichiers /etc/sudoers.d/*
 # ------------------------------------------------------------------------------
 chmod 600 /etc/sudoers.d/inist-tools
